# DSA_tester

./: CMakeLists.txt  README.txt  figures.tex  latek_generator.py  main.cpp  plotgraphs.py
include/: CSVHandler.h  DownsamplingAlgorithms.h  WaveletTransform.h
log/: DWT_sampled.csv  DWT_sampled_curr.csv  DWT_sampled_soc.csv  DWT_sampled_volt.csv  DouglasAdaptive_sampled.csv  Douglas_sampled.csv  PLAA_sampled.csv  RDP_sampled.csv  RDP_sampled_curr.csv  RDP_sampled_soc.csv  RDP_sampled_volt.csv  adaptive_paa_sampled.csv  hybrid_paa_minmax_sampled.csv  log(forklift.csv).txt  log(hyd.csv).txt  log(sample_data_SOC.csv).txt  log(srm_t3.csv).txt  log.txt  lttb_sampled.csv  lttb_sampled_curr.csv  lttb_sampled_soc.csv  lttb_sampled_volt.csv  minmax_sampled.csv  minmax_sampled_curr.csv  minmax_sampled_soc.csv  minmax_sampled_volt.csv  paa_sampled.csv  paa_sampled_curr.csv  paa_sampled_soc.csv  paa_sampled_volt.csv  random_sampled.csv  random_sampled_curr.csv  random_sampled_soc.csv  random_sampled_volt.csv  sample_data_SOC.csv
real_data/: forklift.csv  hyd.csv  sample_data_SOC.csv  srm_t3.csv
src/: CSVHandler.cpp  DownsamplingAlgorithms.cpp  WaveletTransform.cpp
